# SimpleScheduler

./: .gitignore  Cargo.toml  README-en.md  README.md  build.rs
.github/workflows/: ci.yml
module/: config.toml  customize.sh  module.prop  service.sh
src/: files_handler.rs  main.rs  msic.rs
src/cpu/: freqs.rs  governors.rs  misc.rs  mod.rs
src/cpu/freqs/: mod.rs
src/framework/: error.rs  mod.rs
src/framework/config/: data.rs  mod.rs  read.rs
src/framework/scheduler/: mod.rs  topapps.rs  wake.rs
src/framework/scheduler/looper/: fmt.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
