[workspace]
members = ["xtask"]

[package]
name = "SimpleScheduler"
version = "0.1.0"
edition = "2024"
description = "A Simple Scheduler for Android."
authors = ["Tools-cx-app"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/SimpleScheduler"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs", version = "0.1.1" }
env_logger = "0.11.8"
inotify = "0.11.0"
log = "0.4.28"
mimalloc = "0.1.48"
serde = { version = "1.0.228", features = ["serde_derive"] }
sys-mount = "3.0.1"
thiserror = "2.0.17"
toml = "0.9.7"

[build-dependencies]
anyhow = "1.0.100"
toml = "0.9.7"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev]
overflow-checks = false
codegen-units = 1
lto = true
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
